2005-01-14  Not Zed  <NotZed@Ximian.com>

	** Related to changes for #65178.

	* mail-vfolder.c (mv_find_folder): changed from my_list_find, take
	store arg and use camel_Store_Folder_uri_equal() instead of wrong
	uri_cmp function.
	(mail_vfolder_delete_uri): same.
	(mail_vfolder_rename_uri): same.
	(uri_is_ignore): take store arg, and same as above.  use the right
	uri for checking sent folder.
	(mail_vfolder_*): convert to storing uri's in camel form.

2005-01-13  Not Zed  <NotZed@Ximian.com>

	** See bug #71029.

	* em-account-editor.c (emae_option_toggle): revert menjie's patch
	and do it using object args.

2005-01-12  Not Zed  <NotZed@Ximian.com>

	** See bug #70990.

	* em-account-editor.c (emae_service_url_changed): if the value is
	"" then don't set it

	** See bug #70018.

	* mail-signature-editor.c (mail_signature_editor): use the right
	version for the gtkhtml editor control.

2005-01-11  Vivek Jain  <jvivek@novell.com>

	* em-folder-tree.c (render_pixbuf): Added conditions to check for
	shared folders to display different icon if it is a shard folder.	

2005-01-07  Not Zed  <NotZed@Ximian.com>

	* em-account-prefs.c (account_add_clicked): remove old code, setup
	transient parent and weak ref for refresh.

2005-01-06  JP Rosevear  <jpr@novell.com>

	* Makefile.am: install schemas properly

2005-01-06  Jeffrey Stedfast  <fejj@novell.com>

	* mail-folder-cache.c (mail_note_store): Handle the
	CamelOfflineStore case just like the CamelDiscoStore case.

	* mail-ops.c (prep_offline_do): Since we can't kill off
	CamelDisco* (groupwise is using it), we have to handle both
	CamelOfflineFolder and CamelDiscoFolder for now.
	(set_offline_do): Same.

2005-01-05  Not Zed  <NotZed@Ximian.com>

	* em-menu.c: (emph_targets[]): Add the widget target, missed this.

2005-01-05  Not Zed  <NotZed@Ximian.com>

	* em-menu.c (em_menu_target_new_widget): add a semi-dummy target
	for widget target.

	* mail-component.c (handleuri_got_folder): handle the "reply"